[tool.poetry]
name = "bunny"
version = "0.1.0"
description = ""
authors = ["bbbales2 <bbbales2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
tqdm = "^4.64.1"
scipy = "^1.10.0"
jax = "^0.4.1"
jaxlib = "^0.4.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
